Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -58,6 +58,8 @@
   </header>
   <div>
     <dl>
+      <dt>Fri 16 October 2015</dt>
+      <dd><a href="http://blog.xivo.io/sprint-review-1517.html">Sprint Review 15.17</a></dd>
       <dt>Wed 30 September 2015</dt>
       <dd><a href="http://blog.xivo.io/xivo-bluemind-integration.html">XiVO + Bluemind Integration</a></dd>
       <dt>Mon 28 September 2015</dt>
