--- a/index11.html
+++ b/index11.html
@@ -54,6 +54,25 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/sprint-review-1419.html#sprint-review-1419">Sprint Review 14.19</a></h2>
+    <p>
+      Posted on Fri 10 October 2014 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
+    </p>
+  </header>
+  <div>
+      <p>Here are a few links explaining what we are going to ship in XiVO 14.19:</p>
+<ul>
+<li><a href="https://projects.xivo.io/versions/210" title="https://projects.xivo.io/versions/210">Roadmap</a></li>
+<li><a href="http://documentation.xivo.io/dev/administration/ivr/ivr.html" title="http://documentation.xivo.io/dev/administration/ivr/ivr.html">IVR
+    documentation</a>
+    to find out how to set up an Interactive voice response with XiVO</li>
+</ul>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/xivos-new-directory-server.html#xivos-new-directory-server">XiVO's new directory server</a></h2>
     <p>
       Posted on Fri 26 September 2014 in <a href="http://blog.xivo.io/category/software.html">Software</a>
@@ -250,52 +269,6 @@ necessary to identify the product once on the market :</strong></p>
     production as well as the OHANDA logo.</li>
 </ul>
 <p>(1) : http://en.wikipedia.org/wiki/CE_marking</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/passing-the-ce-marking-certification-for-eu-market.html#passing-the-ce-marking-certification-for-eu-market">Passing the CE marking certification for EU market</a></h2>
-    <p>
-      Posted on Mon 11 March 2013 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
-    </p>
-  </header>
-  <div>
-      <div>
-
-![Measurement of radiated
-disturbances](/public/XIOHv5/.MeasurementRadiatedDisturbances_m.jpg "Measurement of radiated disturbances, mar. 2013")
-
-</div>
-
-<div>
-
-**  
-**
-
-</div>
-
-<div>
-
-**The measurements of radiated disturbances had been done using the
-following equipments :**
-
-</div>
-
-<div>
-
--   Semi anechoic chamber (11,8x8,1x9,5m) SIEPEL C01
--   Bilog antenna SHWARZBECK VULB9160
--   EMI receiver RHODE&SCHWARZ ESI40
--   Pré-amplifier BONN 3018-8F30S
--   Horn antenna ETS 3115
-
-</div>
-
-<p>This tests had been done for the B-class which stands for domestic and
-professional markets which means we can now sell in all EU countries.</p>
-<p>Xavier Carcelle.</p>
 </p>
   </div>
 </article>
