--- a/index16.html
+++ b/index16.html
@@ -54,6 +54,19 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/journee-portes-ouvertes.html#journee-portes-ouvertes">Journée portes ouvertes</a></h2>
+    <p>
+      Posted on Mon 11 June 2012 in <a href="http://blog.xivo.io/category/general.html">General</a>
+    </p>
+  </header>
+  <div>
+      <p><a href="/public/portes_ouvertes-1.png" title="portesouvertes"><img alt="portesouvertes" src="/public/.portes_ouvertes-1_m.jpg" title="portesouvertes, juin 2012" /></a></p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/using-reverse-look-ups-to-replace-caller-ids.html#using-reverse-look-ups-to-replace-caller-ids">Using Reverse Look-ups to Replace Caller IDs</a></h2>
     <p>
       Posted on Mon 11 June 2012 in <a href="http://blog.xivo.io/category/software.html">Software</a>
@@ -257,47 +270,6 @@ Greece,Hungary, Iceland, Indonesia, Israel, Italy, Lithuania,
 Luxembourg, Montenegro, Netherlands, New Caledonia (French), Poland,
 PortugalRussian Federation, Slovak Republic, South Africa, Spain,
 Switzerland, United Kingdom, United States, Vietnam</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/how-is-the-xivo-sccp-development-going.html#how-is-the-xivo-sccp-development-going">How is the XiVO-SCCP development going ?</a></h2>
-    <p>
-      Posted on Tue 01 May 2012 in <a href="http://blog.xivo.io/category/software.html">Software</a>
-    </p>
-  </header>
-  <div>
-      <p>From XiVO 1.2.5 we started to integrate the SCCP management directly
-into the web interface.It means that now, people installing a XiVO
-server can natively use the SCCP technologywhen creating new lines,
-without the need to manually install the sccp channel driver andediting
-the configuration file. As the sccp library evolve, the options
-available throughthe web interface will also be expanded.</p>
-<p>Lately we've been working on the multi-instance per line, which will be
-released with XiVO 1.2.7 this week.Basically the multi-instance per line
-is the ability to receive or make many calls at the same time.While only
-one call can be active at a time, it is possible to keep the other call
-alive but on hold.You can then toggle between the calls to pickup any of
-them. Which will put the current active call on hold,and will set the
-selected call as active.</p>
-<p><a href="/public/libsccp/IMG_20120501_092831.jpg" title="7960-multi-instance1"><img alt="7960-multi-instance1" src="/public/libsccp/.IMG_20120501_092831_s.jpg" title="7960-multi-instance1, mai 2012" /></a></p>
-<p>We still have a long list of features we want to write and make
-available directly through XiVO.Even though we are still in early
-development, I encourage everyone that have CISCO phones to installand
-try the SCCP library. Either via XiVO or by manually installing the sccp
-channel driver.</p>
-<p>For those having CISCO phones that use the SCCP technology, we've put
-online a tutorial to help you get this done:
-<a href="http://documentation.xivo.fr/dev/administration/sccp/sccp.html">http://documentation.xivo.fr/dev/administration/sccp/sccp.html</a></p>
-<p>At the bottom of the tutorial, you will also find the list of feature
-and telephone type that we actually support.We hope to extend this list
-as time goes, but we need your help !</p>
-<p>At this point of development, we need more people that use the SCCP
-library. As the number of people using itwill increase, the number of
-bugs reported will increase and hence the number of fix and enhancement.
-At the end, everbody win.</p>
 </p>
   </div>
 </article>
