--- a/index20.html
+++ b/index20.html
@@ -54,6 +54,53 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/libsccp-a-xivo-sccp-implementation-for-asterisk.html#libsccp-a-xivo-sccp-implementation-for-asterisk">libsccp, a XiVO SCCP implementation for Asterisk</a></h2>
+    <p>
+      Posted on Thu 22 December 2011 in <a href="http://blog.xivo.io/category/software.html">Software</a>
+    </p>
+  </header>
+  <div>
+      <p>Have you ever heard of SCCP ? It stands for Skinny Call Control Protocol
+and it's used to interact with Cisco IP Phones. Asterisk has its own
+basic support called chan_skinny and is one of the first open source
+implementation available. There is also a more featured implementation
+called chan_sccp-B, which is a fork of chan_skinny.</p>
+<p><img alt="agile-dashboard.jpg" src="/public/libsccp/.agile-dashboard_s.jpg" title="agile-dashboard.jpg, déc. 2011" /></p>
+<p>Then, why writing another one ? Well, simply because chan_skinny is
+too... skinny! and that chan_sccp-B is full of bugs, have no clear
+roadmap and is not backed by professional developers. Don't worry too
+much, we are not rewriting everything from scratch, all the protocol
+knowledge is based on chan_skinny.</p>
+<p>In the long run, our goal is to produce a stable, full featured and well
+tested code base. To keep our goal in focus, we aim to commit early and
+often. In that, you're encouraged to actively participate by playing
+with the code, reporting errors and sharing your ideas and needs with
+us.</p>
+<p><img alt="sccpp.jpg" src="/public/libsccp/.sccpp_s.jpg" title="sccpp.jpg, déc. 2011" /></p>
+<p>In parallel of the libsccp development, we're building an automated test
+environment. Asterisk has a built-in unit-test framework that allow us
+to stress the bits and bytes of every line of codes in a non-functional
+way. Another tool made by Digium is the Asterisk TestSuite framework.
+This powerfull tool allow us to write specific case scenario and replay
+it as we like. Furthermore, we wrote a traffic generator for the SCCP
+protocol, called SCCPp, that can act as a scriptable softphone. To
+orchestrate and automate all this, we are using Jenkins as a continuous
+integration tool. In short, <a href="http://jenkins.xivo.fr/">Jenkins</a> is able
+to replay all the different level of test automatically everytime
+something is modified in the code. All of this is still at an early
+stage, and is evolving everyday.</p>
+<p><img alt="phone-tested.jpg" src="/public/libsccp/.phone-tested_s.jpg" title="phone-tested.jpg, déc. 2011" /></p>
+<p>For those eager to dig into the code and start using it, you can find
+here how to get started and more:<a href="https://wiki.xivo.fr/index.php/Sccp">https://wiki.xivo.fr/index.php/Sccp</a></p>
+<p>If you are less comfortable with the 'Do It Yourself', libsccp is also
+getting integrated into XiVO Skaro and will be available in the next
+week or so.</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/xivo-ioh-first-cpu-prototype-board-fully-working-part1.html#xivo-ioh-first-cpu-prototype-board-fully-working-part1">XiVO IOH first CPU prototype board fully working - part1</a></h2>
     <p>
       Posted on Fri 16 December 2011 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
@@ -216,39 +263,6 @@ did not try real phones (yet).</p>
 <p><img alt="100_1263.jpg" src="/public/.100_1263_m.jpg" title="100_1263.jpg, déc. 2011" /></p>
 <p><img alt="IMAG1010.jpg" src="/public/.IMAG1010_m.jpg" title="IMAG1010.jpg, déc. 2011" /></p>
 <p><img alt="20111206_113008.jpg" src="/public/.20111206_113008_m.jpg" title="20111206_113008.jpg, déc. 2011" /></p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/xivo-12-and-asterisk-dialplan.html#xivo-12-and-asterisk-dialplan">XiVO 1.2 and Asterisk Dialplan</a></h2>
-    <p>
-      Posted on Tue 06 December 2011 in <a href="http://blog.xivo.io/category/software.html">Software</a>
-    </p>
-  </header>
-  <div>
-      <p><img alt="xivodialplan.jpg" src="/public/xivosoft/xivodialplan.jpg" title="xivodialplan.jpg, déc. 2011" /></p>
-<p>To route a call from origin to destination,
-<a href="http://www.asterisk.org/">Asterisk</a> relies on a so called dialplan. In
-XiVO, it is generated using 3 different components</p>
-<ul>
-<li>XiVO confgen, takes info from the configuration database and
-    generate a directory linked to the base config dialplan</li>
-<li>Base Config dialplan, the dialplan itself</li>
-<li>Agid, dynamically update the dialplan as setting variables (XIVO_),
-    or compute recording file names.</li>
-</ul>
-<p>You'll find this 3 components here :</p>
-<ul>
-<li>git://git.xivo.fr/official/xivo-confgen.git for confgen</li>
-<li>git://git.xivo.fr/official/xivo-skaro.git directory base-config for
-    the static part</li>
-<li>git://git.xivo.fr/official/xivo-skaro.git directory agid for the
-    dynamic part</li>
-</ul>
-<p>You may also have a look at our CI server
-<a href="http://jenkins.xivo.fr/">jenkins</a></p>
 </p>
   </div>
 </article>
