--- a/index25.html
+++ b/index25.html
@@ -54,6 +54,30 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/coming-back-from-rmll2011.html#coming-back-from-rmll2011">Coming back from RMLL2011</a></h2>
+    <p>
+      Posted on Tue 19 July 2011 in <a href="http://blog.xivo.io/category/general.html">General</a>
+    </p>
+  </header>
+  <div>
+      <p>We had the last slot of the day after the lacie-nas.org talk (excellent
+presentation and demonstration from Thomas Monjalon and Simon Guinot)
+where it was discussed the idea of opening hardware products and the
+relation between hardware manufacturers and embedded software
+developers. It becomes clearer and clearer that the OpenSource community
+is pushing the hardware manufacturers to open-up their specifications
+(UART, GPIOs, JTAG) and allow firmware hackings and add-ons
+developments.<br />
+In our case, the hardware will be fully open and documented to allow
+community contributions and we have several questions about TDM
+extensions of our appliances with other interfaces (analog, wireless,
+soundcards ...)</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/coming-back-from-communicasia2011.html#coming-back-from-communicasia2011">Coming back from Communicasia2011</a></h2>
     <p>
       Posted on Tue 19 July 2011 in <a href="http://blog.xivo.io/category/general.html">General</a>
@@ -531,40 +555,6 @@ service is deployed).</p>
 warnings were fixed. An <a href="http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=630358">Intent To
 Package</a> was
 sent to schedule the inclusion in Debian GNU/Linux.</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/caluire-town-hall-installation.html#caluire-town-hall-installation">Caluire Town Hall Installation</a></h2>
-    <p>
-      Posted on Tue 07 June 2011 in <a href="http://blog.xivo.io/category/services.html">Services</a>
-    </p>
-  </header>
-  <div>
-      <p><img alt="installcaluire" src="/public/.IMAG0870_m.jpg" title="installcaluire, juin 2011" /></p>
-<p>I had the chance to participate to
-<a href="http://www.ville-caluire.fr/">Caluire</a> town hall installation a couple
-of weeks ago, where we deployed almost 150 phone sets in the building.</p>
-<p>Two corporate <a href="https://wiki.xivo.fr/index.php/Accueil">XIVO</a> servers
-were inserted between the legacy PBX (Matra) and the PSTN network, we
-spent a lot of time to try to figure out how many channels were
-available as nobody did know it and the information was lost ! ;). Once
-the proper dahdi configuration was found everything started to work well
-and we began to replace little by little all the phone sets.</p>
-<p>Highlights :</p>
-<ul>
-<li>150 phone sets</li>
-<li>DECT</li>
-<li>Mobile gateways to optimize mobile calls cost</li>
-<li>Polycom sound stations for audio conferences</li>
-<li>Fax gateway, mono and multi ports</li>
-</ul>
-<p>As new phone sets were setup beside the old phone sets and old numbers
-were forwarded to the new installed ones, users were able to gradually
-become used to the new way of calling.</p>
-<p>Thanks to Fred for this funny photo from the “installation war room”</p>
 </p>
   </div>
 </article>
