--- a/sprint-review-1517.html
+++ b/sprint-review-1517.html
@@ -19,7 +19,7 @@
 <meta property="og:title" content="Sprint Review 15.17"/>
 <meta property="og:description" content="Greetings fellow XiVOists ! I am pleased to announce that version 15.17 of XiVO has been released. New features in this sprint REST API: A new API for managing SIP accounts has been added. The API can be used for creating SIP accounts and associating them with users on a ..."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://blog.xivo.io/drafts/sprint-review-1517.html"/>
+<meta property="og:url" content="http://blog.xivo.io/sprint-review-1517.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2015-10-16 12:00:00-04:00"/>
 <meta property="article:modified_time" content=""/>
@@ -136,7 +136,7 @@ freedom of XiVO bless your communications across the vast VoIP expanse.</em></p>
     "url": "http://blog.xivo.io/author/gsanderson.html"
   },
   "image": "public/xivo-logo.png",
-  "url": "http://blog.xivo.io/drafts/sprint-review-1517.html",
+  "url": "http://blog.xivo.io/sprint-review-1517.html",
   "description": "Greetings fellow XiVOists ! I am pleased to announce that version 15.17 of XiVO has been released. New features in this sprint REST API: A new API for managing SIP accounts has been added. The API can be used for creating SIP accounts and associating them with users on a ..."
 }
 </script></body>
