--- a/index15.html
+++ b/index15.html
@@ -54,6 +54,41 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/speaking-about-openhardware-at-solutionslinux2012.html#speaking-about-openhardware-at-solutionslinux2012">Speaking about OpenHardware at SolutionsLinux2012</a></h2>
+    <p>
+      Posted on Wed 11 July 2012 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
+    </p>
+  </header>
+  <div>
+      <p>The last <strong>"SolutionsLinux2012"</strong> fair in Paris was the occasion once
+again (as we keep the tradition to have a booth there) to present our
+latest developments for XiVO and the current deployments we have in
+France and elsewhere. This year, <strong>the local web TV</strong> was giving many
+interesting interviews of OpenSource people (you can follow the Flo2sTV
+channel <a href="http://www.youtube.com/user/Flo2sTV" title="here">here</a> and the
+twitter of Philippe Scoffoni
+<a href="https://twitter.com/pscoffoni" title="Philippe Scoffoni twitter">there</a>).</p>
+<p>We had the opportunity to give an <strong>interview about the OpenHardware
+movement current status</strong> (sorry the interview is in french) and some
+insights of the projects and products that are available out-there, as
+well as the description of an OpenHardware.</p>
+<div class="external-media"
+style="margin: 1em auto; text-align: center;">
+
+<iframe width="640" height="360" src="http://www.youtube.com/embed/QyiHHfr_1zQ?fs=1&amp;feature=oembed" frameborder="0" allowfullscreen>
+</iframe>
+
+[Ou en est-on sur
+l'OpenHardware](http://www.youtube.com/watch?v=QyiHHfr_1zQ&list=UUwuwOISdsHyANAgCcykw4UA&index=1&feature=plcp)
+
+</div>
+
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/think-about-xivo.html#think-about-xivo">Think about XiVO ...</a></h2>
     <p>
       Posted on Mon 09 July 2012 in <a href="http://blog.xivo.io/category/general.html">General</a>
@@ -140,19 +175,6 @@ the CTID should not interact directly with WebServices.</p>
 <p>A bunch of bad practices which we are aware of. We are up to the
 challenge and integrating this architecture evolution in our 2-weeks
 iterations makes it all even more exiting.</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/journee-portes-ouvertes.html#journee-portes-ouvertes">Journée portes ouvertes</a></h2>
-    <p>
-      Posted on Mon 11 June 2012 in <a href="http://blog.xivo.io/category/general.html">General</a>
-    </p>
-  </header>
-  <div>
-      <p><a href="/public/portes_ouvertes-1.png" title="portesouvertes"><img alt="portesouvertes" src="/public/.portes_ouvertes-1_m.jpg" title="portesouvertes, juin 2012" /></a></p>
 </p>
   </div>
 </article>
