--- a/index2.html
+++ b/index2.html
@@ -54,6 +54,77 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/sprint-review-1514.html#sprint-review-1514">Sprint review 15.14</a></h2>
+    <p>
+      Posted on Fri 14 August 2015 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
+    </p>
+  </header>
+  <div>
+      <p>Hello everyone,</p>
+<p>With the end of this sprint, most of the work on our new personal
+contacts system has been completed. We have also continued working on
+features already in progress in order to improve and solidify XiVO as a
+whole.</p>
+<h3>New features in this sprint</h3>
+<ul>
+<li>XiVO Client: Work on personal contacts has continued, brining us
+    closer to our goal of merging contact-related features into one
+    simple and feature-complete Xlet. New features this sprint include
+    editing, importing and exporting personal contacts. They can be
+    easily imported/exported with CSV files. Contacts stored in the old
+    Personal Directoy Xlet will be automatically migrated to the new
+    People Xlet after the upgrade. You can also mass delete all your
+    contacts in case of a problem during an importation.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>Yealink: The firmware for Yealink phones has been upgraded to v80.
+    Upgrading the firmware allows us to support the latest models, fix
+    bugs and offer new features. These upgrades also add small
+    improvements, such as a better display for long names and support
+    for searching the XiVO directoy on T4X models.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>Codecs: Opus and text codecs are now supported in XiVO. Adding
+    codecs enhances the interoperability of VoIP technologies, increases
+    the quality of audio, and helps in using less bandwidth. You can
+    configure the use of these codecs through the web interface.</li>
+</ul>
+<h3>Ongoing features</h3>
+<ul>
+<li>Directories: In the last sprint review, we mentioned our ongoing
+    work on unifiying directories. We now want to work on making the new
+    contact infrastructure usable by phones. This means that contacts
+    coming from different sources, such as an LDAP server, your personal
+    contacts, or other people on the same XiVO server, can be
+    transparently accessed and used from a phone.</li>
+</ul>
+<h3>Technical features</h3>
+<ul>
+<li>Asterisk: Minor upgrade from Asterisk 13.4 to 13.5. This upgrade
+    fixes the latest bugs and improves overall stability.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>The default password on polycom phones has been changed to 9486,
+    which represents 'XIVO' in numeric form. Users are strongly
+    encouraged to change this after an installation in order to prevent
+    security exploits.</li>
+</ul>
+<p><em>My fellow xivoists, as the Lord of XiVO allow me to bid you a happy and
+invigorating reading. I wish you shall remain in high spirits until our
+next fateful encounter, 3 weeks from now. May the freedom of xivo bless
+your communications, where ever they may be.</em></p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/all-you-wanted-to-know-about-xivo.html#all-you-wanted-to-know-about-xivo">All you wanted to know about XiVO</a></h2>
     <p>
       Posted on Wed 29 July 2015 in <a href="http://blog.xivo.io/category/xivo-community.html">XiVO Community</a>
@@ -345,109 +416,6 @@ script
 method</a>
 and executing the script as "bash xivo_install_current.sh -d".</p>
 <p><img alt="Asterisk13.png" src="/public/Asterisk13.png" title="Asterisk13.png, juil. 2015" /></p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/sprint-review-1512.html#sprint-review-1512">Sprint Review 15.12</a></h2>
-    <p>
-      Posted on Fri 03 July 2015 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
-    </p>
-  </header>
-  <div>
-      <h3>New in this sprint</h3>
-<ul>
-<li><strong>XiVO Client</strong>: The people xlet allows you to bookmark your
-    contacts and list them. This also opens the way for personal
-    contacts to be available from anywhere.</li>
-</ul>
-<!-- -->
-
-<ul>
-<li><strong>High Availability</strong>: The High Availability system now synchronizes
-    important files between servers. For example, IVR, custom sound
-    files and favorite contacts are preserved. During a failure,
-    telephony will be less affected while the main server is
-    being repaired.</li>
-</ul>
-<!-- -->
-
-<ul>
-<li><strong>Function keys</strong>: Function keys are manageable via a <a href="http://documentation.xivo.io/en/latest/api_sdk/rest_api/confd/func_keys.html" title="REST API">REST
-    API</a>.
-    This allows administrators to manage function keys more easily by
-    applying templates of function keys to a set of users. In the
-    future, this will also allow users to manage their own
-    function keys.</li>
-</ul>
-<!-- -->
-
-<ul>
-<li><strong>REST API</strong>: We currently have REST APIs for 5 components of XiVO,
-    and now 2 of them (xivo-auth and xivo-dird) are protected with
-    encryption and authentication. They can be used directly without
-    requiring configuration. The other 3 are not exposed to the
-    outside world.</li>
-</ul>
-<!-- -->
-
-<ul>
-<li><strong>XiVO Client</strong>: We also made small improvements to the XiVO Client:<ul>
-<li>The systray icon changed from the four letters (XiVO) to a
-    single X</li>
-<li>The list in the People xlet can be sorted by agent status</li>
-<li>New language available: Spanish (Chile)</li>
-</ul>
-</li>
-</ul>
-<h3>Work done in this sprint, but not yet ready</h3>
-<ul>
-<li><strong>Asterisk upgrade</strong>: Upgrade from Asterisk 11 to <a href="https://wiki.asterisk.org/wiki/display/AST/New+in+13" title="Asterisk 13">Asterisk
-    13</a>.
-    In the long run, this will allow us to benefit from new features and
-    other improvements, e.g. better performance, more control over
-    queues and switchboards, correct undesirable behavior, create more
-    meaningful call logs, make Asterisk more scalable (multiple Asterisk
-    servers sharing the load of phone calls). The
-    <a href="https://wiki.asterisk.org/wiki/pages/viewpage.action?pageId=29395573" title="ARI">ARI</a>
-    is a very interesting feature of Asterisk 13 which gives us a lot
-    more flexibility and allows us to add new features easily.</li>
-</ul>
-<!-- -->
-
-<ul>
-<li><strong>CTI authentication</strong>: We mentioned in the previous sprint review
-    users being able to log in their XiVO Clients using
-    LDAP authentication. We are not there yet, but the bookmarked
-    contacts feature validated our authentication mechanism and it is a
-    step in the right direction.</li>
-</ul>
-<!-- -->
-
-<ul>
-<li><strong>64-bit</strong>: XiVO is currently only supported on 32-bit architectures
-    (AKA i386 or x86), but we are working on supporting 64-bit
-    architectures (AKA amd64 or x86_64). An ISO for 64-bit in beta
-    version is <a href="http://mirror.xivo.io/iso/xivo-latest-beta-amd64.iso" title="available for testing">available for
-    testing</a>.</li>
-</ul>
-<p>See you for the next sprint review.</p>
-<p>Source: <a href="http://projects.xivo.io/versions/228" title="15.12 Roadmap">15.12
-Roadmap</a></p>
-<p>Links:</p>
-<ul>
-<li>Function keys REST API:
-    <a href="http://documentation.xivo.io/en/latest/api_sdk/rest_api/confd/func_keys.html" title="http://documentation.xivo.io/en/latest/api_sdk/rest_api/confd/func_keys.html">http://documentation.xivo.io/en/lat...</a></li>
-<li>Asterisk 13 changelog:
-    <a href="https://wiki.asterisk.org/wiki/display/AST/New+in+13" title="https://wiki.asterisk.org/wiki/display/AST/New+in+13">https://wiki.asterisk.org/wiki/disp...</a></li>
-<li>ARI:
-    <a href="https://wiki.asterisk.org/wiki/pages/viewpage.action?pageId=29395573" title="https://wiki.asterisk.org/wiki/pages/viewpage.action?pageId=29395573">https://wiki.asterisk.org/wiki/page...</a></li>
-<li>64-bit ISO download:
-    <a href="http://mirror.xivo.io/iso/xivo-latest-beta-amd64.iso" title="http://mirror.xivo.io/iso/xivo-latest-beta-amd64.iso">http://mirror.xivo.io/iso/xivo-late...</a></li>
-</ul>
-<p><img alt="2015-07-XIVO-15-12-RELEASED-SHARE-IT.png" src="/public/2015-07-XIVO-15-12-RELEASED-SHARE-IT.png" title="2015-07-XIVO-15-12-RELEASED-SHARE-IT.png, juil. 2015" /></p>
 </p>
   </div>
 </article>
