--- a/index29.html
+++ b/index29.html
@@ -54,6 +54,30 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/sourcing-the-components-and-scripting-the-components-parts-e-shops-digikey.html#sourcing-the-components-and-scripting-the-components-parts-e-shops-digikey">Sourcing the components and scripting the components parts e-shops (digikey, ...)</a></h2>
+    <p>
+      Posted on Wed 30 March 2011 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
+    </p>
+  </header>
+  <div>
+      <p>As I am constantly searching for informations on the different parts
+(i.e. components on the PCB), <strong>i have scripted www.digikey.com</strong> (the
+HTML form is quite stable) in python in order to automatize the search
+on the website.</p>
+<p>The script can be found here :
+<a href="http://carcelle.fu8.com/digikey.py" title="digikey.py">digikey.py</a></p>
+<p>This script can be used like : python digikey.py BC847BVNDITR-ND
+(BC847BVNDITR-ND is a part reference on the digikey website).</p>
+<p>I am looking for similar that can be used/optimized for the other e-shop
+such as Farnell, Mouser, Radiospares in order to have a common script
+tool able to search all these e-shops in one and give a report on the
+availability for parts in a db run daily or weekly.</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/building-xivo-skaro-from-sources.html#building-xivo-skaro-from-sources">building XiVO skaro from sources</a></h2>
     <p>
       Posted on Tue 29 March 2011 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
@@ -798,26 +822,6 @@ Submitting a package requires four steps:</p>
 and maintainance of packages based on the XiVO development repository.
 The next step will be to document and simplify the usage, reducing the
 learning curve to a minimum.</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/the-road-to-the-final-pcb-layout-routing-of-the-cpu-board.html#the-road-to-the-final-pcb-layout-routing-of-the-cpu-board">The road to the final PCB layout routing of the CPU board</a></h2>
-    <p>
-      Posted on Fri 11 March 2011 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
-    </p>
-  </header>
-  <div>
-      <p>We are now entering the road to the final PCB layout routing of the CPU
-board of our XiVO IPBX OpenHardware with the gathering of our schematic
-design on the CPU board of our IPBX. The current step is to place the
-component, check the package of each component in the library (Lbr in
-Eagle), double-check the schematics associated to the layout and prepare
-the final routing of the netwire optimized for our 10-layers design. We
-will document the BoM step with different posts coming up and namely the
-optimization of the components sourcing.</p>
 </p>
   </div>
 </article>
