--- a/index32.html
+++ b/index32.html
@@ -54,6 +54,31 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/new-statistic-xivo-modules.html#new-statistic-xivo-modules">New statistic XiVO modules</a></h2>
+    <p>
+      Posted on Fri 11 February 2011 in <a href="http://blog.xivo.io/category/software.html">Software</a>
+    </p>
+  </header>
+  <div>
+      <p>I'm very proud to announce our <strong>new statistics module for XiVO</strong>.
+Please see a first screenshot of this module below :</p>
+<p><img alt="stats.png" src="/public/.stats_m.jpg" title="stats.png, fév. 2011" /></p>
+<p>As you can see, we have integrated a full statistic module for our next
+major version, Skaro. All existing statistics queues in Asterisk (GPLv3)
+are not really usable and not suitable for a call center. Our previous
+version is using Asternic with a lack of performances in the free
+software version and namely in terms if counters from our customers
+point of view.</p>
+<p>We are implementing a cache system to have real-time results and stats.
+The Asterisk queue CSV files can be importable within this module. In
+order to produce graphics, we are using the jqplot library that gives us
+very decent results.</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/creating-an-independant-xivo-debian-gnulinux-repository-from-scratch-part-14.html#creating-an-independant-xivo-debian-gnulinux-repository-from-scratch-part-14">Creating an independant XiVO Debian GNU/Linux repository from scratch (part 1/4)</a></h2>
     <p>
       Posted on Mon 07 February 2011 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
@@ -530,42 +555,6 @@ project (hardware and software files, organization of an OpenHardware
 project, protoyping, ...) and create a community of VoIP geeks that are
 eager to <strong>develop and hack their own IPBX solutions around our XiVO
 IPBX OpenHardware</strong> (interfaces, BSP, SIP-trunk, asterisk hacks...).</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/cabling-the-fxo-fxs-prototype-board.html#cabling-the-fxo-fxs-prototype-board">Cabling the FXO-FXS prototype board</a></h2>
-    <p>
-      Posted on Tue 11 January 2011 in <a href="http://blog.xivo.io/category/xivo-ipbx.html">XiVO IPBX</a>
-    </p>
-  </header>
-  <div>
-      <p><img alt="Cabling FXv5 prototype PCB
-2" src="/public/.P1040816_m.jpg" title="Cabling FXv5 prototype PCB 2, janv. 2011" /><img alt="Cabling
-FXv5 prototype PCB
-1" src="/public/.P1040817_m.jpg" title="Cabling FXv5 prototype PCB 1, janv. 2011" /></p>
-<p>As we are developing an OpenHardware projects/products, it's important
-to give some feedbacks of our prototyping process.We are now cabling our
-first FXO-FXS prototype boards and moving to test without our own board
-connected to our SoC to validate our design on our prototype
-motherboard. These pictures illustrates our soldering process with the
-1:1 size PCB layout printed-out.</p>
-<p>While one is soldering components (mainly some TQFP package chips and
-CMS) on the *blank* PCB, it's important to have the right tools to put
-the components at the right position, solder them (potentially using
-some flux to fix the pins of a chip before soldering a whole line of
-pins) and verifying the connexion with a loop. Let me give some
-references of tools we are using :</p>
-<ul>
-<li>A set of high-precision tweezers (farnell#3972963) to pick and
-    place the components</li>
-<li>A 10x maginifier (farnell#4681680) to verify the quality of the
-    soldering</li>
-<li>A flux cleaner (farnell#3916613)</li>
-<li>A 15ml flux dispenser pen (farnell#876732)</li>
-</ul>
 </p>
   </div>
 </article>
