--- a/index39.html
+++ b/index39.html
@@ -54,6 +54,120 @@
 
 <article>
   <header>
+    <h2><a href="http://blog.xivo.io/opening-the-bootloader-for-openhardware-projects-3-barebox-ex-u-boot-v2.html#opening-the-bootloader-for-openhardware-projects-3-barebox-ex-u-boot-v2">Opening the bootloader for OpenHardware projects [3] : Barebox (ex-U-boot v2)</a></h2>
+    <p>
+      Posted on Thu 25 February 2010 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
+    </p>
+  </header>
+  <div>
+      <p>Following the previous posts about the "open" bootloaders available to
+improve and implement advanced features at the boot of your SoC/CPU, we
+are, in this post, considering Barebox (formely known as u-boot v2) as
+another open bootloader. Barebox aims at giving the developer and
+embedded users the best of u-boot (space, easy-to-flash, handy tools)
+and the best of the Linux kernel (Kconfig, Kbuild, standards C API,
+building methods identical to the kernel with ARCH/CROSS primitives...).</p>
+<p>The latest documentation for barebox can be found here <a href="2" title="2">2</a> and
+lists the different key features of barebox that can listed as followed:</p>
+<ul>
+<li><strong>A posix based file API</strong>: inside barebox the usual
+    open/close/read/write/lseek functions are used. This makes it
+    familiar to everyone who has programmed under unix systems.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Usual shell commands</strong> like ls/cd/mkdir/echo/cat,...</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>The environment is a file store</strong>. It has currently some
+    limitations, of course. The environment is not a real read/write
+    filesystem, it is more like a tar archive, or even more like an ar
+    archive, because it cannot handle directories. The saveenv command
+    saves the files under a certain directory (by default /env) in
+    persistent storage (by default /dev/env0). There is a counterpart
+    called loadenv, too.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Real filesystem support</strong>: The loader starts up with mounting a
+    ramdisk on /. Then a devfs is mounted on /dev allowing the user (or
+    shell commands) to access devices. Apart from these two filesystems
+    there is currently one filesystem ported: cramfs. One can mount it
+    with the usual mount command.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Device/driver model</strong>: Devices are no longer described by defines
+    in the config file. Instead there are devices which can be
+    registered in the board .c file or dynamically allocated. Drivers
+    will match upon the devices automatically.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Clocksource support</strong>: Timekeeping has been simplified by the use
+    of the Linux clocksource API. Only one function is needed for a new
+    board, no <a href="gs" title="gs">gs</a>et_timer<a href="masked" title="masked">masked</a>() or
+    reset_timer<a href="masked" title="masked">masked</a>() functions.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Kconfig and Kernel build system</strong>: Only targets which are really
+    needed get recompiled. Parallel builds are no problem anymore. This
+    also removes the need for many many ifdefs in the code.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Simulation target</strong>: barebox can be compiled to run under Linux.
+    While this is rather useless in real world this is a great debugging
+    and development aid. New features can be easily developped and
+    tested on long train journeys and started under gdb. There is a
+    console driver for linux which emulates a serial device and a tap
+    based ethernet driver. Linux files can be mapped to devices under
+    barebox to emulate storage devices.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Device parameter support</strong>: Each device can have a unlimited
+    number of parameters. They can be accessed on the command line with
+    &lt;devid&gt;.&lt;param&gt;="...", for example 'eth0.ip=192.168.0.7'
+    or 'echo \$eth0.ip'</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Initcalls</strong>: Hooks in the startup process can be archieved
+    with *_initcall() directives in each file.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li><strong>Getopt</strong>: There is a small getopt implementation. Some commands
+    got really complicated (both in code and in usage) due to the fact
+    that U-Boot only allowed positional parameters.</li>
+</ul>
+<!-- -->
+
+<ul>
+<li>Editor: Scripts can be edited with a small editor.</li>
+</ul>
+<p>Barebox is under GPLv2 licence.</p>
+<p><a href="1" title="1">1</a> : http://barebox.org/<a href="2" title="2">2</a> :
+http://barebox.org/documentation/barebox-2010.03.0/</p>
+</p>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="http://blog.xivo.io/opening-the-bootloader-for-openhardware-projects-2-u-boot-das-unterseeboot.html#opening-the-bootloader-for-openhardware-projects-2-u-boot-das-unterseeboot">Opening the bootloader for OpenHardware projects [2] : U-boot - ''Das Unterseeboot\"</a></h2>
     <p>
       Posted on Tue 23 February 2010 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
@@ -326,80 +440,6 @@ specifications/data-sheets as this point.</p>
 <p>Our current objectives is to target an x86 platform that smooths downs
 the porting of the existing XiVO framework or the integration of a
 ARM/MIPS CPU/SoC with open specifications.</p>
-</p>
-  </div>
-  <hr />
-</article>
-<article>
-  <header>
-    <h2><a href="http://blog.xivo.io/hardware-specifications-10-of-the-xivo-appliance.html#hardware-specifications-10-of-the-xivo-appliance">Hardware specifications 1.0 of the XiVO appliance</a></h2>
-    <p>
-      Posted on Mon 25 January 2010 in <a href="http://blog.xivo.io/category/hardware.html">Hardware</a>
-    </p>
-  </header>
-  <div>
-      <p>The goal of the XiVO OpenHardware project is to to develop a open-specs,
-open-docs appliance from the design of the hardware project to the CAD
-files and production files underneath the project. The target of this
-appliance is a small IPBX appliance ideal for SOHO requirements in terms
-of IP-phone lines as well as analog connectivity for fax/analog lines.</p>
-<p>The following bloc diagram expresses the different features targetted on
-the XiVO OpenHardware project to allow the appliance to interact with 4
-PSTN T0 lines, analog FXO and FXS interfaces as well as usual IP
-networks connectivities, storage interfaces and configuration/debugging
-interfaces.</p>
-<p><img alt="XiVO Hardware
-specificatons" src="/public/.XiVO_Appliance_Hardware_Specifications_m.jpg" title="XiVO Hardware specificatons, janv. 2010" /></p>
-<ul>
-<li>The CPU is purposely chosen with a x86 architecture to allow a
-    smooth porting from the existing XiVO framework into the hardware.
-    The BSP is a debian-based Linux and will be easily into this
-    CPU architecture. The CPU will probably behaves as a SoC
-    intregrating the different controllers for the peripherals. RAM will
-    be connected</li>
-</ul>
-<!-- -->
-
-<ul>
-<li>ISDN Lines: 4 T0 lines which allows 8 simultaneous communications.
-    These interfaces will be controlled by a ISDN chip connected to the
-    CPU (SPI/TDM interfaces)</li>
-</ul>
-<!-- -->
-
-<ul>
-<li>Analog phone lines: The appliance is supposed to interact with
-    existing PABX and to act as a PABX for the local phones on the
-    SOHO network. The FXS (Foreign eXchange Subscriber) interface will
-    allow the IPBX to connect to PSTN lines as a subscriber for
-    analog/fax needs. The FXO (Foreign eXchange Office) interface will
-    allow the IPBX to act as an analog PBX to connect local analog
-    phones to the IPBX and allows a SOHO phone environment mixed between
-    IP-phones and analog phones.</li>
-</ul>
-<!-- -->
-
-<ul>
-<li>IP Network: The XiVO IPBX will have 2 100baseT Ethernet interfaces
-    for WAN/LAN IP connectivity</li>
-</ul>
-<!-- -->
-
-<ul>
-<li>Storage: The XiVO IPBX will have external SD, internal HDD storage
-    for the BSP config files as well as for the logs, firewall rules...</li>
-</ul>
-<!-- -->
-
-<ul>
-<li>Debugging/Configuration: The XiVO IPBX will have a USB interface
-    (USB host) allowing the connexion of external devices. Also for
-    debugging and output console, the XiVO IPBX will have a RS232
-    external serial interface as well as on-PCB console ports on
-    the CPU.</li>
-</ul>
-<p>Next steps: prototyping of the different bloc diagram connected to the
-EVB (EValuation Board) of the CPU based on the XiVO framework.</p>
 </p>
   </div>
 </article>
